# xorgxrdp

./: .gitignore  .travis.yml  COPYING  Makefile.am  NEWS.md  README.md  SECURITY.md  bootstrap  configure.ac  readme.txt  upload.sh
.github/workflows/: build.yml
docs/: xorgxrdp_overview.odg
m4/: nasm.m4
module/: Makefile.am  common.asm  nasm_lt.sh  rdp.h  rdpCapture.c  rdpCapture.h  rdpClientCon.c  rdpClientCon.h  rdpComposite.c  rdpComposite.h  rdpCompositeRects.c  rdpCompositeRects.h  rdpCopyArea.c  rdpCopyArea.h  rdpCopyPlane.c  rdpCopyPlane.h  rdpCursor.c  rdpCursor.h  rdpDraw.c  rdpDraw.h  rdpEgl.c  rdpEgl.h  rdpFillPolygon.c  rdpFillPolygon.h  rdpFillSpans.c  rdpFillSpans.h  rdpGC.c  rdpGC.h  rdpGlyphs.c  rdpGlyphs.h  rdpImageGlyphBlt.c  rdpImageGlyphBlt.h  rdpImageText16.c  rdpImageText16.h  rdpImageText8.c  rdpImageText8.h  rdpInput.c  rdpInput.h  rdpLRandR.c  rdpLRandR.h  (+47 more)
module/amd64/: Makefile.am  a8r8g8b8_to_a8b8g8r8_box_amd64_sse2.asm  a8r8g8b8_to_nv12_709fr_box_amd64_sse2.asm  a8r8g8b8_to_nv12_box_amd64_sse2.asm  cpuid_amd64.asm  funcs_amd64.h  i420_to_rgb32_amd64_sse2.asm  uyvy_to_rgb32_amd64_sse2.asm  yuy2_to_rgb32_amd64_sse2.asm  yv12_to_rgb32_amd64_sse2.asm
module/x86/: Makefile.am  a8r8g8b8_to_a8b8g8r8_box_x86_sse2.asm  a8r8g8b8_to_nv12_709fr_box_x86_sse2.asm  a8r8g8b8_to_nv12_box_x86_sse2.asm  cpuid_x86.asm  funcs_x86.h  i420_to_rgb32_x86_sse2.asm  uyvy_to_rgb32_x86_sse2.asm  yuy2_to_rgb32_x86_sse2.asm  yv12_to_rgb32_x86_sse2.asm
scripts/: display_test_logs  install_xorgxrdp_build_dependencies_with_apt.sh
tests/: .gitignore  Makefile.am  xorg-test-run.sh
tests/yuv2rgb/: .gitignore  Makefile  Makefile.am  yuv2rgb_speed.c  yuv2rgb_speed.sh
xrdpdev/: Makefile.am  xorg.conf  xorg_nvidia.conf  xrdpdev.c  xrdpdri2.c  xrdpdri2.h  xrdpdri3.c  xrdpdri3.h
xrdpkeyb/: Makefile.am  rdpKeyboard.c
xrdpmouse/: Makefile.am  rdpMouse.c
